# VisionImageViewer

./: ArchiveHelper.h  CMakeLists.txt  ExplorerView.h  ImageView.cpp  ImageView.h  LICENSE  PluginManager.cpp  PluginManager.h  README.md  build.bat  implementation_summary.md  resource.h  resource.rc  test_main.cpp  vcpkg.json
TinyEXIF/: TinyEXIF.cpp
installer/: VisionImageViewer.iss
src/: ArchiveHelper.cpp  ExplorerView.cpp  ImageViewerWindow.h  MetadataHelper.h  MoveHelper.cpp  MoveHelper.h  main.cpp
src/TinyEXIF/: TinyEXIF.h
testimg/.cache/: Canon_40D (1).jpg.thumb  JPG_TestImage.jpg.thumb  PNG_Test.png.thumb  Panasonic_DMC-FZ30.jpg.thumb  canon_hdr_YES.jpg.thumb  sample_640×426.bmp.thumb  sample_640×426.gif.thumb
testimg/.vision/: Small_pict_test.jpg.thumb
unarr/: CMakeLists.txt
